--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     <h1 class="typed-text-output d-inline font-weight-lighter text-white"></h1>
                     <div class="typed-text d-none">Web Designer, Web Developer, Front End Developer</div>
                     <div class="d-flex align-items-center justify-content-center justify-content-lg-start pt-5">
-                        <a href="" class="btn btn-outline-info btn-white mr-4">Download CV</a>
+                        <a href="Ditipriya Seal_Resume.pdf" download="Resume" class="btn btn-outline-info btn-white mr-4">Download CV</a>
                         
                         <a href="#about" class="btn btn-outline-warning btn-blue d-none d-sm-block">About Me</a>
                     </div>
